--- a/.github/workflows/dep_rust.yml
+++ b/.github/workflows/dep_rust.yml
@@ -46,6 +46,12 @@ jobs:
       - name: clippy
         run: just clippy ${{ matrix.config }}
 
+      - name: Ensure up-to-date Cargo.lock
+        run: |
+          cargo fetch --locked
+          cd src/tests/rust_guests/simpleguest/ && cargo fetch --locked
+          cd src/tests/rust_guests/callbackguest/ && cargo fetch --locked
+
       - name: Get gh action service name
         if: ${{ (runner.os == 'Windows' )}}
         run: (Get-Service actions.runner.*) | Foreach { $_.Name, $_.UserName, $_.ServiceType }
