Update simpleguest and callbackguest Cargo.lock
Signed-off-by: Ludvig Liljenberg <lliljenberg@microsoft.com>

--- a/.github/workflows/dep_rust.yml
+++ b/.github/workflows/dep_rust.yml
@@ -49,8 +49,8 @@ jobs:
       - name: Ensure up-to-date Cargo.lock
         run: |
           cargo fetch --locked
-          cd src/tests/rust_guests/simpleguest/ && cargo fetch --locked
-          cd src/tests/rust_guests/callbackguest/ && cargo fetch --locked
+          cargo fetch --manifest-path src/tests/rust_guests/simpleguest/Cargo.toml --locked
+          cargo fetch --manifest-path src/tests/rust_guests/callbackguest/Cargo.toml --locked
 
       - name: Get gh action service name
         if: ${{ (runner.os == 'Windows' )}}
