--- a/.github/workflows/dep_rust.yml
+++ b/.github/workflows/dep_rust.yml
@@ -60,7 +60,7 @@ jobs:
       - name: clippy
         run: |
           just clippy ${{ matrix.config }}
-          just clippy-guests
+          just clippy-guests ${{ matrix.config }}
 
       # Does not check for updated Cargo.lock files for test rust guests as this causes an issue with this checkwhen deoendabot updates dependencies in common crates
       - name: Ensure up-to-date Cargo.lock
